--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "finofo-fe-test",
+  "homepage": "https://karl-hui.github.io/finofo-fe-test",
   "private": true,
   "version": "0.0.0",
   "type": "module",
